<resources>
    <string name="app_name">Rick And Morty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specy_label">Specy:</string>
    <string name="gender_label">Gender:</string>
    <string name="origin_label">Origin:</string>
    <string name="location_label">Location:</string>
    <string name="episodes_label">Episodes:</string>
    <string name="status_label">Status:</string>
    <string name="created_label">Created at \n(in API): </string>
    <string name="splash_hello_text">Hello!</string>
    <string name="splash_welcome_text">Welcome!</string>
    <string name="check_internet_connection_txt">Please check your internet connection</string>
    <string name="no_characters_found">No characters found</string>
    <string name="no_location_found">No locations found</string>
    <string name="initial_snack_txt">Please select a location to see the characters</string>
</resources>