<?xml version="1.0" encoding="utf-8"?>

<!-- TODO() this layout gonna be modify completely changed. /constraint layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/created_at_margin"
        tools:context=".ui.detailpage.DetailFragment">

        <ImageView
            android:id="@+id/character_detail_page_image"
            style="@style/ImageStyle"
            tools:ignore="ContentDescription,ImageContrastCheck"
            tools:src="@tools:sample/avatars[0]"
            android:layout_marginBottom="20dp" />

        <!-- line  1    -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle">

            <TextView
                android:id="@+id/character_detail_page_status"
                style="@style/TitleStyle"
                android:text="@string/status_label"
                />
            <TextView
                android:id="@+id/character_detail_page_status_txt"
                style="@style/TextStyle" />
        </LinearLayout>

        <!-- line   2   -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle">

            <TextView
                android:id="@+id/character_detail_page_specy"
                style="@style/TitleStyle"
                android:text="@string/specy_label"
                />
            <TextView
                android:id="@+id/character_detail_page_specy_txt"
                style="@style/TextStyle" />
        </LinearLayout>

        <!-- line   3   -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle">

            <TextView
                android:id="@+id/character_detail_page_gender"
                style="@style/TitleStyle"
                android:text="@string/gender_label"
                />
            <TextView
                android:id="@+id/character_detail_page_gender_txt"
                style="@style/TextStyle" />
        </LinearLayout>

        <!-- line  4    -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle">

            <TextView
                android:id="@+id/character_detail_page_origin"
                style="@style/TitleStyle"
                android:text="@string/origin_label"
                />
            <TextView
                android:id="@+id/character_detail_page_origin_txt"
                style="@style/TextStyle" />
        </LinearLayout>

        <!-- line  5    -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle">

            <TextView
                android:id="@+id/character_detail_page_location"
                style="@style/TitleStyle"
                android:text="@string/location_label"
                />
            <TextView
                android:id="@+id/character_detail_page_location_txt"
                style="@style/TextStyle" />
        </LinearLayout>

        <!-- line  6    -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle">

            <TextView
                android:id="@+id/character_detail_page_episode"
                style="@style/TitleStyle"
                android:text="@string/episodes_label"
                />
            <TextView
                android:id="@+id/character_detail_page_episode_txt"
                style="@style/TextStyle" />
        </LinearLayout>

            <!-- line  7    -->
        <LinearLayout
            style="@style/DetailLinearLayoutStyle"
            >

            <TextView
                android:id="@+id/character_detail_page_created"
                style="@style/TitleStyle"
                android:text="@string/created_label"
                />
            <TextView
                android:id="@+id/character_detail_page_created_txt"
                style="@style/TextStyle" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
